[gd_scene load_steps=6 format=4 uid="uid://cic3s2lyt71pl"]

[ext_resource type="TileSet" uid="uid://bf5somtllgctp" path="res://data/nation.tres" id="1_cjgda"]
[ext_resource type="Script" path="res://scenes/house_interior.gd" id="1_ivk1q"]
[ext_resource type="PackedScene" uid="uid://tlkoa6sbnd71" path="res://scenes/player.tscn" id="3_df28l"]
[ext_resource type="PackedScene" uid="uid://cgr4mhsq27qxu" path="res://scenes/canvas_layer.tscn" id="4_63b4x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25k10"]
size = Vector2(32, 9)

[node name="HouseInterior" type="Node2D"]
script = ExtResource("1_ivk1q")

[node name="Floor" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD6/wMAKgAAAAMAAAD7/wMAKgABAAMAAAD8/wMAKgABAAMAAAD9/wMAKgABAAMAAAD+/wMAKgABAAMAAAAEAAMAKgACAAMAAAADAAMAKgABAAMAAAACAAMAKgABAAMAAAABAAMAKgABAAMAAAD+//7/KgABAAEAAAD+////KgABAAIAAAD+/wAAKgABAAIAAAD+/wEAKgABAAIAAAD+/wIAKgABAAIAAAD///7/KgABAAEAAAD/////KgABAAIAAAD//wAAKgABAAIAAAD//wEAKgABAAIAAAD//wIAKgABAAIAAAAAAP7/KgABAAEAAAAAAP//KgABAAIAAAAAAAAAKgABAAIAAAAAAAEAKgABAAIAAAAAAAIAKgABAAIAAAABAP7/KgABAAEAAAABAP//KgABAAIAAAABAAAAKgABAAIAAAABAAEAKgABAAIAAAABAAIAKgABAAIAAAACAP7/KgABAAEAAAACAP//KgABAAIAAAACAAAAKgABAAIAAAACAAEAKgABAAIAAAACAAIAKgABAAIAAAADAP7/KgABAAEAAAADAP//KgABAAIAAAADAAAAKgABAAIAAAADAAEAKgABAAIAAAADAAIAKgABAAIAAAAEAP7/KgACAAEAAAAEAP//KgACAAIAAAAEAAAAKgACAAIAAAAEAAEAKgACAAIAAAAEAAIAKgACAAIAAAD6//7/KgAAAAEAAAD6////KgAAAAIAAAD6/wAAKgAAAAIAAAD6/wEAKgAAAAIAAAD6/wIAKgAAAAIAAAD7//7/KgABAAEAAAD7////KgABAAIAAAD7/wAAKgABAAIAAAD7/wEAKgABAAIAAAD7/wIAKgABAAIAAAD8//7/KgABAAEAAAD8////KgABAAIAAAD8/wAAKgABAAIAAAD8/wEAKgABAAIAAAD8/wIAKgABAAIAAAD9//7/KgABAAEAAAD9////KgABAAIAAAD9/wAAKgABAAIAAAD9/wEAKgABAAIAAAD9/wIAKgABAAIAAAD//wMAKgABAAIAAAAAAAMAKgABAAIAAAA=")
tile_set = ExtResource("1_cjgda")

[node name="ysort" type="TileMapLayer" parent="."]
position = Vector2(0, -7)
tile_map_data = PackedByteArray("AAD7////KwADAAAAAAD8/wAAKwAAAAEAAAD9////KwADAAIAAAD+////KwADAAIAAAD+/wEAKwADAAUAAAD/////KwADAAIAAAABAAIAKwAEAAIAAAACAAEAKwAGAAIAAAACAAIAKwADAAMAAAADAAIAKwAFAAIAAAA=")
tile_set = ExtResource("1_cjgda")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="FurnitureRoot" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 59.5)
shape = SubResource("RectangleShape2D_25k10")

[node name="Player" parent="." instance=ExtResource("3_df28l")]
position = Vector2(-4, 28)

[node name="overground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD5/wMAGQABAAUAAAD4/wMAGQABAAUAAAD4/wIAGQABAAUAAAD5/wIAGQABAAUAAAD5/wEAGQABAAUAAAD4/wEAGQABAAUAAAD5/wAAGQABAAUAAAD5////GQABAAUAAAD5//7/GQABAAUAAAD4//7/GQABAAUAAAD5//3/GQABAAUAAAD4//3/GQABAAUAAAD6//3/GQABAAkAAAD4//z/GQABAAUAAAD5//z/GQABAAUAAAD7//3/GQABAAYAAAD6//z/GQABAAUAAAD8//3/GQABAAYAAAD7//z/GQABAAUAAAD9//3/GQABAAYAAAD8//z/GQABAAUAAAD+//3/GQABAAYAAAD9//z/GQABAAUAAAD+//z/GQABAAUAAAD///z/GQABAAUAAAD9//v/GQABAAUAAAD+//v/GQABAAUAAAAAAPz/GQABAAUAAAD///v/GQABAAUAAAAAAP3/GQABAAYAAAD///3/GQABAAYAAAABAP3/GQABAAYAAAABAPz/GQABAAUAAAACAP3/GQABAAYAAAADAP3/GQABAAYAAAACAPz/GQABAAUAAAAEAP3/GQAAAAkAAAADAPz/GQABAAUAAAAFAP3/GQABAAUAAAAEAPz/GQABAAUAAAAFAP7/GQABAAUAAAAEAP7/GQAAAAUAAAAFAP//GQABAAUAAAAEAP//GQAAAAUAAAAFAAAAGQABAAUAAAAEAAAAGQAAAAUAAAAFAAEAGQABAAUAAAAGAAEAGQABAAUAAAAGAAAAGQABAAUAAAAGAAIAGQABAAUAAAAFAAIAGQABAAUAAAAFAAMAGQABAAUAAAAEAAMAGQAAAAgAAAAEAAIAGQAAAAUAAAAEAAEAGQAAAAUAAAD6/wQAGQABAAUAAAD5/wQAGQABAAUAAAD4/wQAGQABAAUAAAD3/wQAGQABAAUAAAD3//7/GQABAAUAAAD2//7/GQABAAUAAAD2//3/GQABAAUAAAD3//3/GQABAAUAAAD3////GQABAAUAAAD2////GQABAAUAAAD4////GQABAAUAAAD4/wAAGQABAAUAAAD3/wMAGQABAAUAAAD3/wIAGQABAAUAAAD6/wUAGQABAAUAAAD5/wUAGQABAAUAAAD7/wQAGQABAAUAAAD8/wQAGQABAAUAAAD+/wQAGQABAAgAAAD9/wQAGQABAAUAAAAFAAQAGQABAAUAAAAEAAQAGQABAAUAAAADAAMAGQABAAQAAAACAAMAGQABAAQAAAABAAMAGQAAAAQAAAABAAQAGQAAAAgAAAACAAQAGQABAAUAAAADAAQAGQABAAUAAAAFAAUAGQABAAUAAAAEAAUAGQABAAUAAAADAAUAGQABAAUAAAACAAUAGQABAAUAAAABAAUAGQABAAUAAAD7/wUAGQABAAUAAAD7/wYAGQABAAUAAAD6/wYAGQABAAUAAAD8/wUAGQABAAUAAAD9/wUAGQABAAUAAAD9/wYAGQABAAUAAAD8/wYAGQABAAUAAAD5/wYAGQABAAUAAAD4/wYAGQABAAUAAAD4/wUAGQABAAUAAAD3/wYAGQABAAUAAAD3/wUAGQABAAUAAAD2/wYAGQABAAUAAAD2/wUAGQABAAUAAAD2/wQAGQABAAUAAAD6/wcAGQABAAUAAAD5/wcAGQABAAUAAAD2/wMAGQABAAUAAAD1/wUAGQABAAUAAAD1/wQAGQABAAUAAAD1/wMAGQABAAUAAAD2/wIAGQABAAUAAAD1/wIAGQABAAUAAAD2/wEAGQABAAUAAAD1/wEAGQABAAUAAAD2/wAAGQABAAUAAAD1/wAAGQABAAUAAAD4/wcAGQABAAUAAAD3/wcAGQABAAUAAAD3/wEAGQABAAUAAAD3/wAAGQABAAUAAAD2/wcAGQABAAUAAAD1/wcAGQABAAUAAAD1/wYAGQABAAUAAAD1////GQABAAUAAAD1//7/GQABAAUAAAD1//3/GQABAAUAAAAFAPz/GQABAAUAAAAFAPv/GQABAAUAAAAFAPr/GQABAAUAAAAFAPn/GQABAAUAAAAFAPj/GQABAAQAAAAEAPv/GQABAAUAAAAEAPr/GQABAAUAAAAEAPn/GQABAAUAAAAEAPj/GQABAAQAAAADAPv/GQABAAUAAAADAPr/GQABAAUAAAADAPn/GQABAAUAAAADAPj/GQABAAQAAAACAPv/GQABAAUAAAACAPr/GQABAAUAAAACAPn/GQABAAUAAAACAPj/GQABAAQAAAABAPv/GQABAAUAAAABAPr/GQABAAUAAAABAPn/GQABAAUAAAABAPj/GQABAAQAAAAAAPv/GQABAAUAAAAAAPr/GQABAAUAAAAAAPn/GQABAAUAAAAAAPj/GQABAAQAAAD///r/GQABAAUAAAD///n/GQABAAUAAAD///j/GQABAAQAAAD+//r/GQABAAUAAAD+//n/GQABAAUAAAD+//j/GQABAAQAAAD9//r/GQABAAUAAAD9//n/GQABAAUAAAD9//j/GQABAAQAAAD8//v/GQABAAUAAAD8//r/GQABAAUAAAD8//n/GQABAAUAAAD8//j/GQABAAQAAAD7//v/GQABAAUAAAD7//r/GQABAAUAAAD7//n/GQABAAUAAAD7//j/GQABAAQAAAD6//v/GQABAAUAAAD6//r/GQABAAUAAAD6//n/GQABAAUAAAD6//j/GQABAAQAAAD5//v/GQABAAUAAAD5//r/GQABAAUAAAD5//n/GQABAAUAAAD5//j/GQABAAQAAAD4//v/GQABAAUAAAD4//r/GQABAAUAAAD4//n/GQABAAUAAAD4//j/GQABAAQAAAD3//z/GQABAAUAAAD3//v/GQABAAUAAAD3//r/GQABAAUAAAD3//n/GQABAAUAAAD3//j/GQABAAQAAAD2//z/GQABAAUAAAD2//v/GQABAAUAAAD2//r/GQABAAUAAAD2//n/GQABAAUAAAD2//j/GQABAAQAAAD1//z/GQABAAUAAAD1//v/GQABAAUAAAD1//r/GQABAAUAAAD1//n/GQABAAUAAAD1//j/GQABAAQAAAAJAAcAGQABAAUAAAAJAAYAGQABAAUAAAAJAAUAGQABAAUAAAAJAAQAGQABAAUAAAAJAAMAGQABAAUAAAAJAAIAGQABAAUAAAAJAAEAGQABAAUAAAAJAAAAGQABAAUAAAAJAP//GQABAAUAAAAJAP7/GQABAAUAAAAJAP3/GQABAAUAAAAJAPz/GQABAAUAAAAJAPv/GQABAAUAAAAJAPr/GQABAAUAAAAJAPn/GQABAAUAAAAJAPj/GQABAAQAAAAIAAcAGQABAAUAAAAIAAYAGQABAAUAAAAIAAUAGQABAAUAAAAIAAQAGQABAAUAAAAIAAMAGQABAAUAAAAIAAIAGQABAAUAAAAIAAEAGQABAAUAAAAIAAAAGQABAAUAAAAIAP//GQABAAUAAAAIAP7/GQABAAUAAAAIAP3/GQABAAUAAAAIAPz/GQABAAUAAAAIAPv/GQABAAUAAAAIAPr/GQABAAUAAAAIAPn/GQABAAUAAAAIAPj/GQABAAQAAAAHAAcAGQABAAUAAAAHAAYAGQABAAUAAAAHAAUAGQABAAUAAAAHAAQAGQABAAUAAAAHAAMAGQABAAUAAAAHAAIAGQABAAUAAAAHAAEAGQABAAUAAAAHAAAAGQABAAUAAAAHAP//GQABAAUAAAAHAP7/GQABAAUAAAAHAP3/GQABAAUAAAAHAPz/GQABAAUAAAAHAPv/GQABAAUAAAAHAPr/GQABAAUAAAAHAPn/GQABAAUAAAAHAPj/GQABAAQAAAAGAAcAGQABAAUAAAAGAAYAGQABAAUAAAAGAAUAGQABAAUAAAAGAAQAGQABAAUAAAAGAAMAGQABAAUAAAAGAP//GQABAAUAAAAGAP7/GQABAAUAAAAGAP3/GQABAAUAAAAGAPz/GQABAAUAAAAGAPv/GQABAAUAAAAGAPr/GQABAAUAAAAGAPn/GQABAAUAAAAGAPj/GQABAAQAAAAFAAcAGQABAAUAAAAFAAYAGQABAAUAAAAEAAcAGQABAAUAAAAEAAYAGQABAAUAAAADAAcAGQABAAUAAAADAAYAGQABAAUAAAACAAcAGQABAAUAAAACAAYAGQABAAUAAAD7/wcAGQABAAUAAAD8/wcAGQABAAUAAAABAAcAGQABAAUAAAABAAYAGQABAAUAAAAAAAcAGQABAAUAAAAAAAYAGQABAAUAAAD//wcAGQABAAUAAAD//wYAGQABAAUAAAD+/wcAGQABAAUAAAD+/wYAGQABAAUAAAD9/wcAGQABAAUAAAAAAAUAGQABAAUAAAD//wUAGQABAAUAAAD+/wUAGQABAAUAAAD//wQAGQABAAQAAAAAAAQAGQABAAQAAAAJAAkAGQABAAYAAAAJAAgAGQABAAUAAAAIAAkAGQABAAYAAAAIAAgAGQABAAUAAAAHAAkAGQABAAYAAAAHAAgAGQABAAUAAAAGAAkAGQABAAYAAAAGAAgAGQABAAUAAAAFAAkAGQABAAYAAAAFAAgAGQABAAUAAAAEAAkAGQABAAYAAAAEAAgAGQABAAUAAAADAAkAGQABAAYAAAADAAgAGQABAAUAAAACAAkAGQABAAYAAAACAAgAGQABAAUAAAABAAkAGQABAAYAAAABAAgAGQABAAUAAAAAAAkAGQABAAYAAAAAAAgAGQABAAUAAAD//wkAGQABAAYAAAD//wgAGQABAAUAAAD+/wkAGQABAAYAAAD+/wgAGQABAAUAAAD9/wkAGQABAAYAAAD9/wgAGQABAAUAAAD8/wkAGQABAAYAAAD8/wgAGQABAAUAAAD7/wkAGQABAAYAAAD7/wgAGQABAAUAAAD6/wkAGQABAAYAAAD6/wgAGQABAAUAAAD5/wkAGQABAAYAAAD5/wgAGQABAAUAAAD4/wkAGQABAAYAAAD4/wgAGQABAAUAAAD3/wkAGQABAAYAAAD3/wgAGQABAAUAAAD2/wkAGQABAAYAAAD2/wgAGQABAAUAAAD1/wkAGQABAAYAAAD1/wgAGQABAAUAAAAMAAkAGQACAAYAAAAMAAgAGQACAAUAAAAMAAcAGQACAAUAAAAMAAYAGQACAAUAAAAMAAUAGQACAAUAAAAMAAQAGQACAAUAAAAMAAMAGQACAAUAAAAMAAIAGQACAAUAAAAMAAEAGQACAAUAAAAMAAAAGQACAAUAAAAMAP//GQACAAUAAAAMAP7/GQACAAUAAAAMAP3/GQACAAUAAAAMAPz/GQACAAUAAAAMAPv/GQACAAUAAAAMAPr/GQACAAUAAAAMAPn/GQACAAUAAAAMAPj/GQACAAQAAAALAAkAGQABAAYAAAALAAgAGQABAAUAAAALAAcAGQABAAUAAAALAAYAGQABAAUAAAALAAUAGQABAAUAAAALAAQAGQABAAUAAAALAAMAGQABAAUAAAALAAIAGQABAAUAAAALAAEAGQABAAUAAAALAAAAGQABAAUAAAALAP//GQABAAUAAAALAP7/GQABAAUAAAALAP3/GQABAAUAAAALAPz/GQABAAUAAAALAPv/GQABAAUAAAALAPr/GQABAAUAAAALAPn/GQABAAUAAAALAPj/GQABAAQAAAAKAAkAGQABAAYAAAAKAAgAGQABAAUAAAAKAAcAGQABAAUAAAAKAAYAGQABAAUAAAAKAAUAGQABAAUAAAAKAAQAGQABAAUAAAAKAAMAGQABAAUAAAAKAAIAGQABAAUAAAAKAAEAGQABAAUAAAAKAAAAGQABAAUAAAAKAP//GQABAAUAAAAKAP7/GQABAAUAAAAKAP3/GQABAAUAAAAKAPz/GQABAAUAAAAKAPv/GQABAAUAAAAKAPr/GQABAAUAAAAKAPn/GQABAAUAAAAKAPj/GQABAAQAAAD0/wkAGQABAAYAAAD0/wgAGQABAAUAAAD0/wcAGQABAAUAAAD0/wYAGQABAAUAAAD0/wUAGQABAAUAAAD0/wQAGQABAAUAAAD0/wMAGQABAAUAAAD0/wIAGQABAAUAAAD0/wEAGQABAAUAAAD0/wAAGQABAAUAAAD0////GQABAAUAAAD0//7/GQABAAUAAAD0//3/GQABAAUAAAD0//z/GQABAAUAAAD0//v/GQABAAUAAAD0//r/GQABAAUAAAD0//n/GQABAAUAAAD0//j/GQABAAQAAADz/wkAGQAAAAYAAADz/wgAGQAAAAUAAADz/wcAGQAAAAUAAADz/wYAGQAAAAUAAADz/wUAGQAAAAUAAADz/wQAGQAAAAUAAADz/wMAGQAAAAUAAADz/wIAGQAAAAUAAADz/wEAGQAAAAUAAADz/wAAGQAAAAUAAADz////GQAAAAUAAADz//7/GQAAAAUAAADz//3/GQAAAAUAAADz//z/GQAAAAUAAADz//v/GQAAAAUAAADz//r/GQAAAAUAAADz//n/GQAAAAUAAADz//j/GQAAAAQAAAD6/wIAGQACAAUAAAD6/wEAGQACAAUAAAD6/wAAGQACAAUAAAD6////GQACAAUAAAD6//7/GQACAAUAAAD+/wMAGQACAAQAAAD9/wMAGQABAAQAAAD8/wMAGQABAAQAAAD7/wMAGQABAAQAAAD6/wMAGQABAAgAAAA=")
tile_set = ExtResource("1_cjgda")

[node name="VillagerPosition" type="Marker2D" parent="."]
position = Vector2(-46, 6)

[node name="CanvasLayer" parent="." instance=ExtResource("4_63b4x")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
